# fell

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bench.md  build.md  test.md
bench/: CMakeLists.txt
bench/micro/: CMakeLists.txt  decoder_bench.cpp  registry_bench.cpp  replication_bench.cpp  storage_bench.cpp  swapping_bench.cpp
bench/sys/: CMakeLists.txt  network_bench.cpp
broker/: acceptor.cpp  broker.cpp  connection_manager.cpp  frame_decoder.cpp  request_handler.cpp  topic_registry.cpp
broker/include/broker/: acceptor.hpp  broker.hpp  connection_manager.hpp  connection_state.hpp  frame_decoder.hpp  protocol.hpp  request_handler.hpp  topic_registry.hpp
cli/: cli_util.hpp  consumer_cli.cpp  producer_cli.cpp
cmake/: CompilerFlags.cmake
felld/: main.cpp
platform/: epoll_poller.cpp  file_posix.cpp  file_win.cpp  socket_posix.cpp  socket_win.cpp  wsapoll_poller.cpp
platform/include/platform/: endian.hpp  file.hpp  ipoller.hpp  socket.hpp
replication/: cluster_config.cpp  partition_meta.cpp  replica_manager.cpp  replication_client.cpp  replication_server.cpp
replication/include/replication/: cluster_config.hpp  partition_meta.hpp  repl_protocol.hpp  replica_manager.hpp  replication_client.hpp  replication_server.hpp
scripts/: config.bat  network_bench_table.bat
storage/: log_recovery.cpp  offset_index.cpp  partition_store.cpp  segment_reader.cpp  segment_writer.cpp
storage/include/storage/: debug_mutex.hpp  log_format.hpp  log_recovery.hpp  offset_index.hpp  partition_store.hpp  segment_reader.hpp  segment_writer.hpp  storage_options.hpp
tests/: CMakeLists.txt  frame_decoder_test.cpp  main.cpp  request_handler_test.cpp  request_handler_v2_test.cpp  test_pending_ack.cpp  test_replica_manager.cpp  test_replication_client.cpp  test_replication_integration.cpp  topic_registry_test.cpp
tests/storage/: log_recovery_test.cpp  offset_index_test.cpp  partition_store_test.cpp  segment_reader_test.cpp  segment_writer_test.cpp
